--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="prose prose-zinc max-w-none font-comic">
+	<body
+		data-sveltekit-preload-data="hover"
+		class="prose prose-zinc max-w-none font-comic bg-[#fcfaf4]"
+	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
