--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 	</head>
 	<body
 		data-sveltekit-preload-data="hover"
-		class="prose prose-zinc max-w-none font-comic bg-[#fcfaf4]"
+		class="prose prose-stone max-w-none font-comic bg-[#fcfaf4]"
 	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
